--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -3,8 +3,28 @@
 }
 
 .main-goat-container {
+  padding: 10px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.anim-goat {
+  animation: bounce 0.2s linear;
+}
+
+@keyframes bounce {
+    0% {
+        transform: scale(1.0);
+    }
+    50% {
+        transform: scale(.9);
+    }
+    100% {
+        transform: scale(1.0);
+    }
 }
